      OPENSSL_INIT_ENGINE_PADLOCK
      OPENSSL_INIT_ENGINE_AFALG
      OPENSSL_INIT_ENGINE_ALL_BUILTIN
      OPENSSL_INIT_ATFORK
      OPENSSL_INIT_NO_ATEXIT
    * Add Net::SSLeay::OPENSSL_INIT_SETTINGS class.
    * Add Net::SSLeay::OPENSSL#init_ssl method.
  [Incompatible Changes]
    * Remove the logic of OpenSSL initializetion because this is automatically executed after OpenSSL 1.1.0.
0.015 2024-11-20
  [New Features]
    * Add Net::SSLeay::SSL_CTX#set_psk_server_callback method.
    * Add Net::SSLeay::EVP_CIPHER_CTX class.
    * Add Net::SSLeay::HMAC_CTX class.
    * Add Net::SSLeay::Callback::TlsextTicketKey class.
    * Add Net::SSLeay::SSL_CTX#set_tlsext_ticket_key_cb method.
    * Add Net::SSLeay::Callback::AlpnSelect class.
    * Add Net::SSLeay::SSL_CTX#set_alpn_select_cb_with_protocols method.
    * Add Net::SSLeay::SSL_CTX#set_next_proto_select_cb_with_protocols method.
    * Add Net::SSLeay::SSL_CTX#set_next_protos_advertised_cb_with_protocols method.
    * Add Net::SSLeay::Callback::NewSession class.
    * Add Net::SSLeay::Callback::RemoveSession class.
    * Add Net::SSLeay::SSL_CTX#sess_set_new_cb method.
    * Add Net::SSLeay::SSL_CTX#sess_set_remove_cb method.
    * Add Net::SSLeay::Callback::NextProtoSelect class.
    * Add Net::SSLeay::Callback::Net::SSLeay::Callback::NextProtosAdvertised class.
    * Add Net::SSLeay::Callback::Msg class.
    * Add Net::SSLeay#set_msg_callback method.
0.014 2024-11-19
  [New Features]
    * Add Net::SSLeay::OCSP#single_get0_status method.
    * Add Net::SSLeay::OCSP#resp_find method.
    * Add Net::SSLeay::OCSP_SINGLERESP#DESTROY method.
    * Add Net::SSLeay::OCSP#resp_get0 method.
    * Add Net::SSLeay::OCSP#response_get1_basic method.
    * Add Net::SSLeay::X509_STORE_CTX#get1_issuer method.
    * Add Net::SSLeay::X509_STORE_CTX#Init method.
    * Add Net::SSLeay::X509#dup method.
    * Add Net::SSLeay::OCSP#cert_to_id method.
    * Add Net::SSLeay::X509#check_issued method.